[project]
name = "kia-ios-shortcuts"
version = "2.0.0"
description = "FastAPI service to control Kia/Hyundai vehicles via iOS Shortcuts"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "hyundai-kia-connect-api>=3.32.7",
]
